Update HTML signature template: enhance layout with app demo GIF, improve styling, and add call-to-action button for scheduling meetings.

--- a/signature-html-only.html
+++ b/signature-html-only.html
@@ -1,27 +1,40 @@
-<table cellpadding="0" cellspacing="0" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #2C3E50; border-collapse: collapse; background: linear-gradient(135deg, #f8f9fa 0%, #ffffff 100%); border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.08);">
+<table cellpadding="0" cellspacing="0" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #2C3E50; border-collapse: collapse; background: #ffffff; border-radius: 8px; box-shadow: 0 2px 12px rgba(0,0,0,0.1); max-width: 600px;">
   <tr>
-    <td style="padding: 20px 25px 20px 20px; vertical-align: top; border-radius: 12px 0 0 12px;">
-      <img src="peerakeet.png" alt="Peerakeet" width="90" style="margin-bottom: 12px; display: block; filter: drop-shadow(0 2px 4px rgba(0,0,0,0.1));" /><br />
-      <div style="margin-bottom: 8px;">
-        <strong style="font-size: 18px; color: #1a365d; font-weight: 600; letter-spacing: -0.5px;">Ishan & Hunter</strong> 
-        <span style="color: #64748b; font-size: 13px; font-weight: 400;">(he/him)</span>
-      </div>
-      <div style="margin-bottom: 6px;">
-        <span style="color: #475569; font-size: 14px; font-weight: 500;">Co-Founders, Peerakeet</span>
-      </div>
-      <div style="margin-bottom: 16px;">
-        <em style="color: #7C3AED; font-size: 13px; font-weight: 500; font-style: italic;">From Isolation to Connection</em>
+    <!-- App Demo (GIF) on the LEFT -->
+    <td style="padding: 24px; vertical-align: top; background: #f8fafc; border-radius: 8px 0 0 8px;">
+      <img src="peerakeet.gif" alt="Peerakeet App Demo" width="240" height="360" style="border-radius: 12px; display: block; box-shadow: 0 4px 20px rgba(124, 58, 237, 0.2); border: 1px solid #E2E8F0;" />
+    </td>
+
+    <!-- Visual Separator -->
+    <td style="width: 1px; background: linear-gradient(to bottom, transparent, #A855F7, transparent); padding: 0;"></td>
+
+    <!-- Branding & Contact on the RIGHT -->
+    <td style="padding: 24px 24px 24px 20px; vertical-align: top;">
+      <!-- Logo -->
+      <img src="peerakeet.png" alt="Peerakeet" width="90" style="margin-bottom: 16px; display: block;" />
+
+      <!-- Names and Roles -->
+      <div style="margin-bottom: 12px; line-height: 1.4;">
+        <strong style="font-size: 20px; color: #1a365d; font-weight: 700; letter-spacing: -0.3px;">Ishan</strong> <span style="color: #475569; font-size: 14px; font-weight: 600;">- CEO</span><br />
+        <strong style="font-size: 20px; color: #1a365d; font-weight: 700; letter-spacing: -0.3px;">Hunter</strong> <span style="color: #475569; font-size: 14px; font-weight: 600;">- CTO</span>
       </div>
 
-      <div style="line-height: 1.6;">
-        <a href="https://www.peerakeet.com" target="_blank" style="color: #7C3AED; text-decoration: none; font-size: 13px; font-weight: 500; display: block; margin-bottom: 4px; transition: color 0.2s ease;">peerakeet.com</a>
-        <a href="https://www.linkedin.com/company/peerakeet" target="_blank" style="color: #7C3AED; text-decoration: none; font-size: 13px; font-weight: 500; display: block; margin-bottom: 4px; transition: color 0.2s ease;">LinkedIn: /company/peerakeet</a>
-        <a href="https://www.instagram.com/peerakeet" target="_blank" style="color: #7C3AED; text-decoration: none; font-size: 13px; font-weight: 500; display: block; margin-bottom: 4px; transition: color 0.2s ease;">Instagram: @peerakeet</a>
-        <a href="https://calendly.com/ishan_p_shah-brown/30min" target="_blank" style="color: #7C3AED; text-decoration: none; font-size: 13px; font-weight: 500; display: block; transition: color 0.2s ease;">Book a meeting</a>
+      <!-- Value Proposition -->
+      <div style="margin-bottom: 20px;">
+        <em style="color: #7C3AED; font-size: 14px; font-weight: 500; font-style: italic; line-height: 1.4;">From Isolation to Connection</em>
       </div>
-    </td>
-    <td style="border-left: 3px solid #7C3AED; padding: 20px; vertical-align: top; border-radius: 0 12px 12px 0; background: rgba(124, 58, 237, 0.02);">
-      <img src="peerakeet.gif" alt="Peerakeet App" width="130" height="130" style="border-radius: 12px; display: block; box-shadow: 0 8px 25px rgba(124, 58, 237, 0.15); border: 2px solid rgba(124, 58, 237, 0.1);" />
+
+      <!-- Contact Links -->
+      <div style="line-height: 1.8; margin-bottom: 18px;">
+        <a href="https://www.peerakeet.com" target="_blank" style="color: #7C3AED; text-decoration: none; font-size: 13px; font-weight: 500; display: block;">peerakeet.com</a>
+        <a href="https://www.linkedin.com/company/peerakeet" target="_blank" style="color: #7C3AED; text-decoration: none; font-size: 13px; font-weight: 500; display: block;">LinkedIn</a>
+        <a href="https://www.instagram.com/peerakeet" target="_blank" style="color: #7C3AED; text-decoration: none; font-size: 13px; font-weight: 500; display: block;">Instagram</a>
+      </div>
+
+      <!-- Call-to-Action Button -->
+      <div style="padding: 12px 16px; background: linear-gradient(135deg, #7C3AED 0%, #8B5CF6 100%); border-radius: 6px; text-align: center;">
+        <a href="https://calendly.com/ishan_p_shah-brown/30min" target="_blank" style="color: #ffffff; text-decoration: none; font-size: 14px; font-weight: 600; display: block;">Schedule a Meeting</a>
+      </div>
     </td>
   </tr>
 </table> 
